light and dark mode fix

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  @apply bg-primary text-primary;
+}
+
+.rounded-div {
+  @apply border border-secondary rounded-2xl shadow-xl bg-primary px-2 w-full mx-auto;
+  /* max-width-[1140px] */
+}
+
 .dark {
   --color-bg-primary: #2d3748;
   --color-bg-secondary: #283141;
